# mistral-action

./: .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml  setup.sh
.github/workflows/: mistral.yml
prompts/: system.md
src/mistral_action/: __main__.py  context.py  github_api.py  main.py  modes.py  prompt_builder.py  run_vibe.py
tests/: test_modes.py
